Finished bootstrap website

--- a/projects/3/deliverables/assets/css/style.css
+++ b/projects/3/deliverables/assets/css/style.css
@@ -98,7 +98,7 @@ content #cta input.tf.name
         width: 176px;
     }
     
-content #cta input.tf.name.np-margin
+content #cta input.tf.name.no-margin
     {
         margin: 0;
     }
