--- a/projects/3/deliverables/assets/css/style_bootstrap.css
+++ b/projects/3/deliverables/assets/css/style_bootstrap.css
@@ -1,8 +1,87 @@
 body {
         background: #eee;
+        padding: 0;
+        margin: 20 auto;
     }
 
-h1
+h1, h3
     {
-        
+        margin: 5px;
+        padding: 0;
+        font-weight: 100;
+        font-family: Verdana sans-serif;
+    }
+    
+h2
+    {
+        margin: 5px;
+        padding: 0 0 0 15px;
+        font-weight: 100;
+        font-family: Verdana sans-serif;
+    }
+    
+p
+    {
+        padding: 10px;
+        font-size: 20px;
+    }
+    
+ul
+    {
+        list-style-type: none;
+        padding: 1;
+        margin: 0;
+    }
+
+#cat
+    {
+        max-height: 500px;
+    }
+
+#cta
+    {
+        padding: 10px;
+        margin: 5px;
+        border: 1px solid #aaa;
+        background: white;
+    }
+
+#drop
+    {
+        display: block;
+    }
+
+#cta .submitButton
+    {
+        font-size: 20px;
+        width: 100%;
+        margin-top: 20px;
+        padding: 6px 0;
+        background: green;
+        color: white;
+        cursor: pointer;
+        outline: none;
+        border: none;
+    }
+
+#paws
+    {
+        width: 10%;
+        padding: 0 0 0 5;
+    }
+
+#footer
+    {
+        background: #333;
+        color: #fff;
+    }
+    
+a
+    {
+        text-decoration: none;
+    }
+
+#footer h6
+    {
+        margin-left: 20px;
     }
