--- a/projects/6/deliverables/assets/css/style.css
+++ b/projects/6/deliverables/assets/css/style.css
@@ -2,17 +2,32 @@ body {
     background: rgb(221,221,221);
 }
 
+h1 {
+    font-family: Verdana, sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    font-family: fantasy;
+}
+
 .container {
     width: 760px;
     margin: 0 auto;
 }
 
-.post {
-    border: 1px solid #aaa;
+.postId {
+    border: 2px solid #aaa;
+    padding: 10px;
+    padding-bottom: 25px;
+    margin-bottom: 5px; 
 }
 
 .remove {
     border: 1px solid #aaa;
+    background-color: #e6e6e6;
+    float: right;
 }
 
 .title {
@@ -25,4 +40,5 @@ body {
     padding-top: 5px;
     padding-bottom: 30px;
     padding-left: 20px;
+    color: #0d0d0d;
 }
