--- a/projects/6/deliverables/assets/css/style.css
+++ b/projects/6/deliverables/assets/css/style.css
@@ -1,9 +1,47 @@
 body {
-    background: rgb(221,221,221);
+    background-image: url(http://thumbs.dreamstime.com/z/chocolate-cake-texture-18211360.jpg);/*rgb(221,221,221);*/
+    color: #2C0C0F;
 }
 
 h1 {
     font-family: Verdana, sans-serif;
+    border-bottom: 2px dashed #8A4035;
+    padding-left: 10px;
+    text-shadow: 1px 1px 5px white;
+    color: #2C0C0F;
+}
+
+header {
+    background-color: #985B49;
+    margin-bottom: 5px;
+    padding: 10px;
+}
+
+.navbar {
+    border-bottom: 2px dashed #8A4035;
+    margin-bottom: 10px;
+    background-color: #985B49;/*#6D3622;*/
+    width: 99%;
+}
+
+.navbar img {
+    max-width: 25px;
+}
+
+.navbar li {
+    position: relative;
+    display: inline-block;
+    padding: 10px;
+}
+
+.navbar ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.info {
+    padding-left: 30px;
 }
 
 a {
@@ -13,15 +51,23 @@ a {
 }
 
 .container {
-    width: 760px;
+    width: 900px;
     margin: 0 auto;
 }
 
 .postId {
-    border: 2px solid #aaa;
+    border: 2px solid #8A4035;
     padding: 10px;
     padding-bottom: 25px;
     margin-bottom: 5px; 
+    background-color: #CC9880;
+}
+
+.posts .posts {
+    border: 2px solid rgb(221,221,221);
+    padding: 15px;
+    position: relative;
+    width: 266px;
 }
 
 .remove {
@@ -30,9 +76,9 @@ a {
     float: right;
 }
 
-.title {
+.posts .title {
     font-size: 28px;
-    border-bottom: 2px dashed #aaa;
+    border-bottom: 2px dashed #8A4035;
 }
     
 .body {
@@ -41,4 +87,46 @@ a {
     padding-bottom: 30px;
     padding-left: 20px;
     color: #0d0d0d;
+}
+
+a:hover {
+    color: white;
+    transition: ease-in-out .33s;
+}
+
+/*Single Post Page*/
+.postPage header {
+    font-size: 30px;
+    font-weight: bold;
+    padding: 30px;
+}
+
+.postPage .body {
+    background-color: #CC9880;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.postPage footer {
+    background-color: #8A4035;
+    margin: 10px;
+    padding-left: 20px;
+    position: absolute;
+    bottom: 0;
+    width: 99%;
+}
+
+.postPage footer a {
+    color: #2C0C0F;
+}
+
+.postPage footer a:hover {
+    color: white;
+    transition: ease-in-out .33s;
+}
+}
+
+.postPage .title {
+    font-size: 28px;
+    border-bottom: 2px dashed #aaa;
 }
