--- a/projects/7/deliverables/assets/css/style.css
+++ b/projects/7/deliverables/assets/css/style.css
@@ -1,14 +1,13 @@
 body {
-  background: #a4be67;
+  background: #cff09e;
   font-family: Verdana, sans-serif;
-  color: #252f17;
+  color: #0b486b;
   margin: 20 auto;
   padding-bottom: 70px;
   min-height: 100%;
 }
 
 #info {
-	color: #9A6308;
 	font-weight: 60px;
 	padding: 10px;
 	margin: 20px;
@@ -25,67 +24,96 @@ body {
 }
 
 #header {
-	background: rgb(118,164,30);
+	background: #a8dba8;
 	padding: 30px;
-	margin:10px;
-	font-weight: 100px;
-	border:solid 5px #568165;
-}
-
-#footer {
-	background: rgb(118,164,30);
-	padding: 20px;
 	margin: 10px;
-	bottom: 0;
-	position: relative;
-	clear:both;
-	border:solid 4px #568165;
+	font-weight: 100px;
+	border: solid 5px #3b8686;
 }
 
 #results {
-    border-bottom: 2px dashed #252F17;
-    padding-left: 25px;
+    border-bottom: 1px solid #252F17;
     margin-bottom: 10px;
 }
-/* Below is for the search_results.html page */
-.results_id {
-    border: 2px solid #568165;
+
+.homepage_link {
+	float: right;
+	font-style: italic;
 }
 
+.outer_container {
+	width: 90%;
+	margin: 0 auto;
+	float: none;
+}
+
+/* Below is for the search_results.html page */
+
+.results_id {
+    border-bottom: 1px solid #252f17;
+    padding: 2%;
+}
+
+.results_id img {
+	position: relative;
+	display: inline-block;
+}
+
+.results_id .name {
+	font-size: 18px;
+	font-weight: 50px;
+	position: relative;
+	display: inline-block;
+}
+
+.person_info {
+	position: relative;
+	display: inline-block;
+}
+
+/* Below is for the individual profile_page.html */
+
+.profile_name {
+	font-size: 28px;
+	border-bottom: 1px solid #252f17;
+	margin: 5px;
+}
+
+.ind_pic .img-responsive {
+	float: left;
+	width: 35%;
+	margin: 15px;
+}
+
+.profile_id .name {
+	margin-top: 5%;
+}
 
 /* Below is for the show_all.html page */
+
 .contact_id {
-	border: 2px solid #568165;
-	padding: 10px;
-    margin: 20px;
-	padding-bottom: 25px;
-	margin-bottom: 25px;
-	background-color: #9a6308;
+	border: 2px solid #0b486b;
+	background-color: #79bd9a;
+	padding: 1%;
+	margin: 3%;
     position: relative;
     display: inline-block;
-    width: 30%;
+    width: 26%;
 }
 
-.contact_id img {
-	float: right;
-	border: 1px solid #252F17;
+.contact_id .img-responsive {
+	margin: 0 auto;
+	width: 95%;
+	border: 1px solid #0b486b;
 }
 
 .contact_id .name {
 	font-weight: 50px;
-	border-bottom: 2px dashed #252F17;
-	margin-bottom: 10px;
 	font-size: 18px;
+	text-align: center;
 }
 
-.contact_id .phone {
-	padding-left: 20px;
-}
-
-.contact_id .address {
-	padding-left: 20px;
-}
-
-.contact_id .email {
-	padding-left: 20px;
+.contact_id .idlink {
+	font-size: 12px;
+	text-align: center;
 }
